<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title=""
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView"
        app:actionViewClass="android.widget.SearchView"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_get_top_rated_elements"
        android:title="@string/topRatedElementLabel"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_get_watch_list"
        android:title="@string/watchListLabel"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView" />
</menu>